# PARALiA-GEMMex

./: .gitignore  .gitmodules  CMakeLists.txt  Deploy.sh  README.md  config_karol.sh  config_karol_8A100.sh  config_silver1.sh  config_system.sh  deploy.sh  nvidia_smi_parser.py  nvidia_topo_parse.py  sconfig_silver1.in
Autotuner/: CMakeLists.txt
Autotuner/include/: Autotuner.hpp  Subkernel_distributions.hpp  TaskDistribution.hpp
Autotuner/microbenchmarks/: Run_microbenchmarks.in  bw_bench_bidirectional_grid_2D.cpp  bw_bench_broadcast_2D.cpp  bw_bench_fullgrid_2D.cpp  bw_bench_gather_2D.cpp  bw_bench_grid_2D.cpp  bw_bench_scatter_2D.cpp  chl_2D_microbench_grids.cpp  chl_test_gamalg_gemm.cpp  chl_test_memloc_numbering.cpp  helpers.cpp  microbenchmarks.hpp
Autotuner/microbenchmarks/nvidia-energy-measure/: CMakeLists.txt
Autotuner/microbenchmarks/python_parsers/: parse_bw_bench.py
Autotuner/src/: Autotuner.cpp  Routing.cpp  Subkernel_distributions.cpp  TaskDistribution.cpp
Backend/: CMakeLists.txt  README.md
Backend/grid_amalgamation/: chain_transfer.cpp  chl_grid_amalgamation.hpp  grid_amalgamation.cpp  grid_amalgamation.hpp  problem_comm_translate.cpp
Backend/microbenchmarks/: bw_bench_broadcast_2D.cpp  bw_bench_fullgrid_2D.cpp  chl_2D_microbench_grids.cpp  chl_2D_throughput_test.cpp  chl_test_gamalg_gemm.cpp  chl_test_memloc_numbering.cpp  helpers.cpp  transfer_link_microbench_GPUs.cpp  transfer_link_microbench_host lat_backup.cpp
Backend/nvidia-energy-measure/: CMakeLists.txt
Backend/smart_wrappers/: chl_smart_wrappers.hpp  data_helpers.cpp  general_utils.cpp  numa_awareness.cpp  smart_wrappers.hpp
Backend/smart_wrappers/CuCuBLAS/: backend_class_wrappers.cu  backend_data_wrappers.cu  backend_routine_wrappers.cpp  backend_util_wrappers.cu  backend_wrappers.hpp
Benchmarking/: CMakeLists.txt  Strong_scaling_evaluation.in  Targeted_performance_evaluation.in
Benchmarking/CuCuBLAS/include/: BackenedLibsWrapped.hpp  Testing.hpp
Benchmarking/CuCuBLAS/src/: testing.cpp
Benchmarking/CuCuBLAS/src/Component_testers/: testLinkOverlap.cpp
Benchmarking/CuCuBLAS/src/PARALia/: dgemm_predictor.cpp  dgemm_runner.cpp  dgemm_runner_hetero.cu  dgemm_tester.cpp  hgemm_runner.cpp  sgemm_runner.cpp  sgemm_tester.cpp
Benchmarking/CuCuBLAS/src/cuBLASXt/: cuBLASWrappers.cpp  cuBLASXtWrappers.cpp  cuBLASXt_dgemm_runner.cpp  cuBLASXt_sgemm_runner.cpp
Benchmarking/Python_Scripts/: compare_implementations.ipynb  dev_parser.ipynb  main_plotter.ipynb  main_plotter_uncut.ipynb  strong_scalability_dataset_export.csv  strong_scaling_analysis.ipynb
CHANGE-LINK/: .gitignore  .gitmodules  config_karol.sh  sconfig_karol.in
CHANGE-LINK/grid_amalgamation/: chain_transfer.cpp
CHANGE-LINK/microbenchmarks/: chl_2D_microbench_grids.cpp  chl_test_gamalg_gemm.cpp  chl_test_memloc_numbering.cpp  microbenchmarks.hpp  transfer_link_microbench_GPUs.cpp  transfer_link_microbench_host lat_backup.cpp
CHANGE-LINK/smart_wrappers/: general_utils.cpp  numa_awareness.cpp  smart_wrappers.hpp
CHANGE-LINK/smart_wrappers/CuCuBLAS/: backend_class_wrappers.cu  backend_lib_wrappers.cu  backend_util_wrappers.cu  backend_wrappers.hpp
Deployment_files/: config_silver1.sh
Deployment_files/karol_8A100/: config_karol_8A100.sh
Deployment_files/karol_8A100_predep/: config_karol_8A100.sh
Deployment_files/meluxina_4A100/: config_system_meluxina_4A100.sh
Deployment_files/vega_4A100/: config_VEGA_4A100.sh
Deployment_files/vega_4A100_predep/: config_VEGA_4A100.sh
Library_scheduler/: CMakeLists.txt
Library_scheduler/CuCuBLAS/: Decom_backend.cpp  backend_lib_wrappers.cu  backend_routine_wrappers.cpp  backend_routine_wrappers.cu  backend_wrappers.hpp
Library_scheduler/include/: DataTile.hpp  Decomposer.hpp  PARALiA.hpp  Subkernel.hpp
Library_scheduler/src/: DataTile.cpp  Decomposer.cpp  Routing.cpp  Subkernel.cpp  extern_definitions.cpp
Library_scheduler/src/Functions/: dgemm.cpp
